--- a/nakama-frontend/src/App.css
+++ b/nakama-frontend/src/App.css
@@ -1,5 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Londrina+Solid:wght@100;300;400;900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Oswald:wght@200..700&display=swap');
+
 @tailwind base; /* Preflight will be injected here */
 
 @tailwind components;
 
 @tailwind utilities;
+
+@theme {
+  --font-oswald: "Oswald", serif; 
+  --font-opensans: "Open Sans", serif;
+  --font-londrina: "Londrina Solid", serif;
+}
